--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 		<!-- Grafiks -->
 			<div class="container chapter">
-				<div class="row flex-items-xs-middle flex-items-xs-center" style="margin-bottom: 40px;">
+				<div class="row flex-items-xs-middle flex-items-xs-center center" style="margin-bottom: 40px;">
 				    <div class="row">
             			<div style="background-color:#FFFACD;padding:20px;">
             				<p><strong>Ierobežojumi saistībā ar Covid-19 izplatību</strong></p>
@@ -68,7 +68,7 @@
             		</div>
 				</div>
 				
-				<div class="row flex-items-xs-middle flex-items-xs-center">
+				<div class="row flex-items-xs-middle flex-items-xs-center center">
 				    <div class="row">
             			<div>
             				<img src="assets/CSS/vjc-2021-new.png" style="max-width: 100%;">
