--- a/nodarbibas.html
+++ b/nodarbibas.html
@@ -64,8 +64,14 @@
 						<tbody>
 							<tr class="upper-tr">
 								<td><strong>Pirmdiena</strong></td>
-								<td>18:30 - 20:00</td>
+								<td>17:30 - 19:00</td>
 								<td>Visi līmeņi</td>
+								<td>Ārija</td>
+							</tr>
+							<tr class="upper-tr">
+								<td></td>
+								<td>19:20 - 20:50</td>
+								<td>Iesācēji</td>
 								<td>Ārija</td>
 							</tr>
 							<tr class="upper-tr">
@@ -109,8 +115,12 @@
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Pirmdiena</div>
 				<div class="card-body text-info">
-					<h5 class="card-title">18:30 - 20:00</h5>
+					<h5 class="card-title">17:30 - 19:00</h5>
 					<p class="card-text">Visi līmeņi</p>
+					<p class="card-text">Ārija</p>
+					<hr>
+					<h5 class="card-title">19:20 - 20:50</h5>
+					<p class="card-text">Iesācēji</p>
 					<p class="card-text">Ārija</p>
 				</div>
 				<div class="card-footer">
