--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
 		<!-- Grafiks -->
 			<div class="container chapter">
 				<div class="row flex-items-xs-middle flex-items-xs-center center">
-					<div class="row">
-						<div>
+					<div class="row" style="flex-wrap: nowrap;">
+						<div style="margin: 0 30px;">
 							<img src="assets/CSS/vjc-2022-new.png" style="max-width: 100%;">
+						</div>
+						<div style="margin: 0 30px;">
+							<img src="assets/CSS/vjc-2022-arija-new.png" style="max-width: 100%;">
 						</div>
             				</div>
 				</div>
