--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 			<div class="container chapter">
 				<div class="row flex-items-xs-middle flex-items-xs-center center">
 					<div class="row" style="flex-wrap: nowrap;">
-						<div style="margin: 0 30px;">
-							<img src="assets/CSS/vjc-2022-new.png" style="max-width: 100%;">
+						<div style="margin: 0 10px;">
+							<img src="assets/CSS/vjc-2022-new.png" style="max-width: 100%;max-height: 100%;">
 						</div>
-						<div style="margin: 0 30px;">
-							<img src="assets/CSS/vjc-2022-arija-new.png" style="max-width: 100%;">
+						<div style="margin: 0 10px;">
+							<img src="assets/CSS/vjc-2022-arija-new.png" style="max-width: 100%;max-height: 100%;">
 						</div>
             				</div>
 				</div>
