--- a/nodarbibas.html
+++ b/nodarbibas.html
@@ -52,7 +52,7 @@
 	<div class="container chapter">
 		<div class="row head align-self-center">
 			<div class="col">
-				<h3>Nodarbību grafiks <strong>2021./2022.</strong> gadam</h3>
+				<h3>Nodarbību grafiks <strong>2022./2023.</strong> gadam</h3>
 			</div>
 		</div>
 
@@ -64,44 +64,38 @@
 						<tbody>
 							<tr>
 								<td><strong>Pirmdiena</strong></td>
-								<td>17:30 - 19:00</td>
-								<td>Visi līmeņi</td>
+								<td>19:00 - 20:30</td>
+								<td>1.-3. līmenis</td>
 								<td>Ārija</td>
 							</tr>
-							<tr class="upper-tr" >
-								<td></td>
-								<td>19:20 - 20:50</td>
-								<td>Iesācēji</td>
-								<td>Ārija</td>
-							</tr>
-							<tr class="upper-tr">
+							<tr>
 								<td><strong>Otrdiena</strong></td>
-								<td>18:30 - 20:30</td>
-								<td>Klase sievietēm</td>
+								<td>18:30 - 20:00</td>
+								<td>Visi līmeņi</td>
 								<td>Inta</td>
 							</tr>
 							<tr>
 								<td><strong>Trešdiena</strong></td>
 								<td>8:30 - 10:00</td>
-								<td>Visi līmeņi</td>
+								<td>Iesācēji + 1.-2. līmenis</td>
 								<td>Ārija</td>
 							</tr>
 							<tr class="upper-tr">
 								<td></td>
-								<td>18:30 - 20:00</td>
-								<td>Visi līmeņi</td>
+								<td>19:00 - 20:30</td>
+								<td>Iesācēji</td>
 								<td>Ārija</td>
 							</tr>
-							<tr class="upper-tr">
+							<tr>
 								<td><strong>Ceturtdiena</strong></td>
-								<td>18:30 - 20:30</td>
+								<td>18:30 - 20:00</td>
 								<td>Visi līmeņi</td>
 								<td>Inta</td>
 							</tr>
 							<tr>
 								<td><strong>Sestdiena</strong></td>
-								<td>8:30 - 10:00</td>
-								<td>Visi līmeņi</td>
+								<td>10:00 - 11:30</td>
+								<td>Iesācēji</td>
 								<td>Inta</td>
 							</tr>
 						</tbody>
@@ -115,12 +109,8 @@
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Pirmdiena</div>
 				<div class="card-body text-info">
-					<h5 class="card-title">17:30 - 19:00</h5>
-					<p class="card-text">Visi līmeņi</p>
-					<p class="card-text">Ārija</p>
-					<hr>
-					<h5 class="card-title">19:20 - 20:50</h5>
-					<p class="card-text">Iesācēji</p>
+					<h5 class="card-title">19:00 - 20:30</h5>
+					<p class="card-text">1.-3. līmenis</p>
 					<p class="card-text">Ārija</p>
 				</div>
 				<div class="card-footer">
@@ -129,8 +119,8 @@
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Otrdiena</div>
 				<div class="card-body text-info">
-					<h5 class="card-title">18:30 - 20:30</h5>
-					<p class="card-text">Klase sievietēm</p>
+					<h5 class="card-title">18:30 - 20:00</h5>
+					<p class="card-text">Visi līmeņi</p>
 					<p class="card-text">Inta</p>
 				</div>
 				<div class="card-footer">
@@ -140,11 +130,11 @@
 				<div class="card-header">Trešdiena</div>
 				<div class="card-body text-info">
 					<h5 class="card-title">8:30 - 10:00</h5>
-					<p class="card-text">Visi līmeņi</p>
+					<p class="card-text">Iesācēji + 1.-2. līmenis</p>
 					<p class="card-text">Ārija</p>
 					<hr>
-					<h5 class="card-title">18:30 - 20:00</h5>
-					<p class="card-text">Visi līmeņi</p>
+					<h5 class="card-title">19:00 - 20:30</h5>
+					<p class="card-text">Iesācēji</p>
 					<p class="card-text">Ārija</p>
 				</div>
 				<div class="card-footer">
@@ -153,7 +143,7 @@
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Ceturtdiena</div>
 				<div class="card-body text-info">
-					<h5 class="card-title">18:30 - 20:30</h5>
+					<h5 class="card-title">18:30 - 20:00</h5>
 					<p class="card-text">Visi līmeņi</p>
 					<p class="card-text">Inta</p>
 				</div>
@@ -163,8 +153,8 @@
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Sestdiena</div>
 				<div class="card-body text-info">
-					<h5 class="card-title">8:30 - 10:00</h5>
-					<p class="card-text">Visi līmeņi</p>
+					<h5 class="card-title">10:00 - 11:30</h5>
+					<p class="card-text">Iesācēji</p>
 					<p class="card-text">Inta</p>
 				</div>
 				<div class="card-footer">
@@ -215,12 +205,12 @@
 				<div class="col-xs-12 col-md-6 col-lg-3 block">
 					<div class="card text-xs-center cenas">
 						<div class="card-header prices">
-							<h3><span class="currency">€</span>10<span class="period">/nodarbība</span></h3>
+							<h3><span class="currency">€</span>12,50<span class="period">/nodarbība</span></h3>
 						</div>
 						<div class="card-block">
 							<ul>
-								<li>Iegādājoties abonementu 4x* (abonementa cena <strong>€40</strong>)</li>
-								<li>Vienas ģimenes locekļiem - 15% atlaide</li>
+								<li>Iegādājoties abonementu 4x* (abonementa cena <strong>€50</strong>)</li>
+								<li>Vienas ģimenes locekļiem - 10% atlaide</li>
 							</ul>
 						</div>
 					</div>
@@ -230,12 +220,12 @@
 				<div class="col-xs-12 col-md-6 col-lg-3 block">
 					<div class="card text-xs-center cenas">
 						<div class="card-header prices">
-							<h3><span class="currency">€</span>8<span class="period">/nodarbība</span></h3>
+							<h3><span class="currency">€</span>9,50<span class="period">/nodarbība</span></h3>
 						</div>
 						<div class="card-block">
 							<ul>
-								<li>Iegādājoties abonementu 8x* (abonementa cena <strong>€65</strong>)</li>
-								<li>Vienas ģimenes locekļiem - 15% atlaide</li>
+								<li>Iegādājoties abonementu 8x* (abonementa cena <strong>€75</strong>)</li>
+								<li>Vienas ģimenes locekļiem - 10% atlaide</li>
 							</ul>
 						</div>
 					</div>
