--- a/nodarbibas.html
+++ b/nodarbibas.html
@@ -62,13 +62,13 @@
 				<div class="col tabula">
 					<table>
 						<tbody>
-							<tr>
+							<tr class="upper-tr">
 								<td><strong>Pirmdiena</strong></td>
 								<td>19:00 - 20:30</td>
 								<td>1.-3. līmenis</td>
 								<td>Ārija</td>
 							</tr>
-							<tr>
+							<tr class="upper-tr">
 								<td><strong>Otrdiena</strong></td>
 								<td>18:30 - 20:00</td>
 								<td>Visi līmeņi</td>
@@ -86,7 +86,7 @@
 								<td>Iesācēji</td>
 								<td>Ārija</td>
 							</tr>
-							<tr>
+							<trclass="upper-tr">
 								<td><strong>Ceturtdiena</strong></td>
 								<td>18:30 - 20:00</td>
 								<td>Visi līmeņi</td>
