--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<div class="row flex-items-xs-middle flex-items-xs-center center">
 					<div class="row" style="flex-wrap: nowrap;">
 						<div style="margin: 0 10px;">
-							<img src="assets/CSS/vjc-2023-ziema.png" style="max-width: 100%;max-height: 100%;">
+							<p style="text-align: center;">Uzņemšana jaunajai rudens sezonai jau drīz!</p>
 						</div>
             				</div>
 				</div>
