--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
 				<div class="row flex-items-xs-middle flex-items-xs-center center">
 					<div class="row" style="flex-wrap: nowrap;">
 						<div style="margin: 0 10px;">
-							<p style="text-align: center;">Uzņemšana jaunajai rudens sezonai jau drīz!</p>
+<!-- 							<p style="text-align: center;">Uzņemšana jaunajai rudens sezonai jau drīz!</p> -->
+							<p style="text-align: center;">
+								<img src="assets/CSS/extra/jauna-uznemsana-2023.png" alt="jauna-uznemsana-2023">
+							</p>
 						</div>
             				</div>
 				</div>
