--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<div style="margin: 0 10px;">
 <!-- 							<p style="text-align: center;">Uzņemšana jaunajai rudens sezonai jau drīz!</p> -->
 							<p style="text-align: center;">
-								<img src="assets/CSS/extra/jauna-uznemsana-2023.png" alt="jauna-uznemsana-2023">
+								<img src="assets/CSS/extra/jauna-uznemsana-2023.png" alt="jauna-uznemsana-2023" style="width: 65%;">
 							</p>
 						</div>
             				</div>
