--- a/nodarbibas.html
+++ b/nodarbibas.html
@@ -72,7 +72,7 @@
 							<tr class="upper-tr">
 								<td><strong>Otrdiena</strong></td>
 								<td>18:30 - 20:00</td>
-								<td>Visi līmeņi</td>
+								<td>2. līmenis</td>
 								<td>Inta</td>
 							</tr>
 							<tr>
@@ -90,13 +90,13 @@
 							<tr class="upper-tr">
 								<td><strong>Ceturtdiena</strong></td>
 								<td>18:30 - 20:00</td>
-								<td>Visi līmeņi</td>
+								<td>Iesācēji</td>
 								<td>Inta</td>
 							</tr>
 							<tr>
 								<td><strong>Sestdiena</strong></td>
-								<td>10:00 - 11:30</td>
-								<td>Iesācēji</td>
+								<td>9:30 - 11:00</td>
+								<td>1. līmenis</td>
 								<td>Inta</td>
 							</tr>
 						</tbody>
@@ -121,7 +121,7 @@
 				<div class="card-header">Otrdiena</div>
 				<div class="card-body text-info">
 					<h5 class="card-title">18:30 - 20:00</h5>
-					<p class="card-text">Visi līmeņi</p>
+					<p class="card-text">2. līmenis</p>
 					<p class="card-text">Inta</p>
 				</div>
 				<div class="card-footer">
@@ -145,7 +145,7 @@
 				<div class="card-header">Ceturtdiena</div>
 				<div class="card-body text-info">
 					<h5 class="card-title">18:30 - 20:00</h5>
-					<p class="card-text">Visi līmeņi</p>
+					<p class="card-text">Iesācēji</p>
 					<p class="card-text">Inta</p>
 				</div>
 				<div class="card-footer">
@@ -154,8 +154,8 @@
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Sestdiena</div>
 				<div class="card-body text-info">
-					<h5 class="card-title">10:00 - 11:30</h5>
-					<p class="card-text">Iesācēji</p>
+					<h5 class="card-title">9:30 - 11:00 </h5>
+					<p class="card-text">1. līmenis</p>
 					<p class="card-text">Inta</p>
 				</div>
 				<div class="card-footer">
