--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 						<div style="margin: 0 10px;">
 <!-- 							<p style="text-align: center;">Uzņemšana jaunajai rudens sezonai jau drīz!</p> -->
 							<p style="text-align: center;">
-								<img src="assets/CSS/extra/jauna-uznemsana-2023.png" alt="jauna-uznemsana-2023" style="width: 65%;">
+								<img src="assets/CSS/extra/jauna-uznemsana-2023.png" alt="jauna-uznemsana-2023-inta" style="width: 45%;">
+								<img src="assets/CSS/extra/jauna-joga-arija-2023.png" alt="jauna-uznemsana-2023-arija" style="width: 45%;">
 							</p>
 						</div>
             				</div>
