--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</div>
 
 		<!-- Grafiks -->
-			<div class="container chapter">
+			<div class="container chapter" style="display:none">
 				<div class="row flex-items-xs-middle flex-items-xs-center center">
 					<div class="row" style="flex-wrap: nowrap;">
 						<div style="margin: 0 10px;">
@@ -71,7 +71,116 @@
             				</div>
 				</div>
 			</div>
+		
+		<!-- Pagaidu grafiks -->
+		<!-- Mobile -->
+		<div class="apraksts-mobile grafiks">
+			<div class="d-flex justify-content-center">
+				<div class="col tabula">
+					<table>
+						<tbody>
+							<tr class="upper-tr">
+								<td><strong>Pirmdiena</strong></td>
+								<td>19:00 - 20:30</td>
+								<td>1.-3. līmenis</td>
+								<td>Ārija</td>
+							</tr>
+							<tr class="upper-tr">
+								<td><strong>Otrdiena</strong></td>
+								<td>18:30 - 20:00</td>
+								<td>2. līmenis</td>
+								<td>Inta</td>
+							</tr>
+							<tr>
+								<td><strong>Trešdiena</strong></td>
+								<td>8:30 - 10:00</td>
+								<td>Iesācēji + 1.-2. līmenis</td>
+								<td>Ārija</td>
+							</tr>
+							<tr class="upper-tr">
+								<td></td>
+								<td>19:00 - 20:30</td>
+								<td>Iesācēji</td>
+								<td>Ārija</td>
+							</tr>
+							<tr class="upper-tr">
+								<td><strong>Ceturtdiena</strong></td>
+								<td>18:30 - 20:00</td>
+								<td>Iesācēji</td>
+								<td>Inta</td>
+							</tr>
+							<tr>
+								<td><strong>Sestdiena</strong></td>
+								<td>9:30 - 11:00</td>
+								<td>1. līmenis</td>
+								<td>Inta</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+
+		<!-- Desktop -->
+		<div id="nodarbibasCards" class="card-deck  apraksts-desk grafiks">
+			<div class="card border-info mb-3" style="max-width: 18rem;">
+				<div class="card-header">Pirmdiena</div>
+				<div class="card-body text-info">
+					<h5 class="card-title">19:00 - 20:30</h5>
+					<p class="card-text">1.-3. līmenis</p>
+					<p class="card-text">Ārija</p>
+				</div>
+				<div class="card-footer">
+				</div>
+			</div>
+			<div class="card border-info mb-3" style="max-width: 18rem;">
+				<div class="card-header">Otrdiena</div>
+				<div class="card-body text-info">
+					<h5 class="card-title">18:30 - 20:00</h5>
+					<p class="card-text">2. līmenis</p>
+					<p class="card-text">Inta</p>
+				</div>
+				<div class="card-footer">
+				</div>
+			</div>
+			<div class="card border-info mb-3" style="max-width: 18rem;">
+				<div class="card-header">Trešdiena</div>
+				<div class="card-body text-info">
+					<h5 class="card-title">8:30 - 10:00</h5>
+					<p class="card-text">Iesācēji + 1.-2. līmenis</p>
+					<p class="card-text">Ārija</p>
+					<hr>
+					<h5 class="card-title">19:00 - 20:30</h5>
+					<p class="card-text">Iesācēji</p>
+					<p class="card-text">Ārija</p>
+				</div>
+				<div class="card-footer">
+				</div>
+			</div>
+			<div class="card border-info mb-3" style="max-width: 18rem;">
+				<div class="card-header">Ceturtdiena</div>
+				<div class="card-body text-info">
+					<h5 class="card-title">18:30 - 20:00</h5>
+					<p class="card-text">Iesācēji</p>
+					<p class="card-text">Inta</p>
+				</div>
+				<div class="card-footer">
+				</div>
+			</div>
+			<div class="card border-info mb-3" style="max-width: 18rem;">
+				<div class="card-header">Sestdiena</div>
+				<div class="card-body text-info">
+					<h5 class="card-title">9:30 - 11:00 </h5>
+					<p class="card-text">1. līmenis</p>
+					<p class="card-text">Inta</p>
+				</div>
+				<div class="card-footer">
+				</div>
+			</div>
+		</div>
+		<hr>
 	</div>
+<!-- 	Pagaidu grafiks - beigas -->
 
 	<!-- 2. parallax daļa -->
 	<div class="bgpar2 parallax">
