--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
 			</div>
 		
 		<!-- Pagaidu grafiks -->
+		<div class="row head align-self-center">
+			<div class="col">
+				<h3>Nodarbību grafiks <strong>2022./2023.</strong> gadam</h3>
+			</div>
+		</div>
 		<!-- Mobile -->
 		<div class="apraksts-mobile grafiks">
 			<div class="d-flex justify-content-center">
