--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 		<!-- Pagaidu grafiks -->
 		<div class="row head align-self-center">
 			<div class="col">
-				<h3>Nodarbību grafiks <strong>2022./2023.</strong> gadam</h3>
+				<h5>Nodarbību grafiks <strong>2024./2025.</strong> gadam sekos drīzumā!</h5>
 			</div>
 		</div>
 		<!-- Mobile -->
-		<div class="apraksts-mobile grafiks">
+		<div class="apraksts-mobile grafiks" style="display:none">
 			<div class="d-flex justify-content-center">
 				<div class="col tabula">
 					<table>
@@ -127,7 +127,7 @@
 		</div>
 
 		<!-- Desktop -->
-		<div id="nodarbibasCards" class="card-deck  apraksts-desk grafiks">
+		<div id="nodarbibasCards" class="card-deck  apraksts-desk grafiks" style="display:none">
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Pirmdiena</div>
 				<div class="card-body text-info">
@@ -183,7 +183,6 @@
 				</div>
 			</div>
 		</div>
-		<hr>
 	</div>
 <!-- 	Pagaidu grafiks - beigas -->
 
