--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			</div>
 		</div>
 		<!-- Mobile -->
-		<div class="apraksts-mobile grafiks" style="display:none">
+		<div class="apraksts-mobile grafiks" style="display:none !important;">
 			<div class="d-flex justify-content-center">
 				<div class="col tabula">
 					<table>
