--- a/nodarbibas.html
+++ b/nodarbibas.html
@@ -53,7 +53,7 @@
 	<div class="container chapter">
 		<div class="row head align-self-center">
 			<div class="col">
-				<h3>Nodarbību grafiks <strong>2022./2023.</strong> gadam</h3>
+				<h3>Nodarbību grafiks <strong>2024./2025.</strong> gadam</h3>
 			</div>
 		</div>
 
@@ -66,37 +66,37 @@
 							<tr class="upper-tr">
 								<td><strong>Pirmdiena</strong></td>
 								<td>19:00 - 20:30</td>
-								<td>1.-3. līmenis</td>
+								<td>Iesācēji (jauna grupa)</td>
 								<td>Ārija</td>
 							</tr>
 							<tr class="upper-tr">
 								<td><strong>Otrdiena</strong></td>
-								<td>18:30 - 20:00</td>
-								<td>2. līmenis</td>
+								<td>18:00 - 20:00</td>
+								<td>Klase sievietēm</td>
 								<td>Inta</td>
 							</tr>
 							<tr>
 								<td><strong>Trešdiena</strong></td>
 								<td>8:30 - 10:00</td>
-								<td>Iesācēji + 1.-2. līmenis</td>
+								<td>Iesācēji (jauna grupa)</td>
 								<td>Ārija</td>
 							</tr>
 							<tr class="upper-tr">
 								<td></td>
 								<td>19:00 - 20:30</td>
-								<td>Iesācēji</td>
+								<td>Pamatklase</td>
 								<td>Ārija</td>
 							</tr>
 							<tr class="upper-tr">
 								<td><strong>Ceturtdiena</strong></td>
-								<td>18:30 - 20:00</td>
-								<td>Iesācēji</td>
+								<td>18:00 - 19:30</td>
+								<td>Iesācēju klase (2. gads)</td>
 								<td>Inta</td>
 							</tr>
 							<tr>
 								<td><strong>Sestdiena</strong></td>
-								<td>9:30 - 11:00</td>
-								<td>1. līmenis</td>
+								<td>9:00 - 10:30</td>
+								<td>Pamatklase</td>
 								<td>Inta</td>
 							</tr>
 						</tbody>
@@ -111,7 +111,7 @@
 				<div class="card-header">Pirmdiena</div>
 				<div class="card-body text-info">
 					<h5 class="card-title">19:00 - 20:30</h5>
-					<p class="card-text">1.-3. līmenis</p>
+					<p class="card-text">Iesācēji (jauna grupa)</p>
 					<p class="card-text">Ārija</p>
 				</div>
 				<div class="card-footer">
@@ -120,8 +120,8 @@
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Otrdiena</div>
 				<div class="card-body text-info">
-					<h5 class="card-title">18:30 - 20:00</h5>
-					<p class="card-text">2. līmenis</p>
+					<h5 class="card-title">18:00 - 20:00</h5>
+					<p class="card-text">Klase sievietēm</p>
 					<p class="card-text">Inta</p>
 				</div>
 				<div class="card-footer">
@@ -131,11 +131,11 @@
 				<div class="card-header">Trešdiena</div>
 				<div class="card-body text-info">
 					<h5 class="card-title">8:30 - 10:00</h5>
-					<p class="card-text">Iesācēji + 1.-2. līmenis</p>
+					<p class="card-text">Iesācēji (jauna grupa)</p>
 					<p class="card-text">Ārija</p>
 					<hr>
 					<h5 class="card-title">19:00 - 20:30</h5>
-					<p class="card-text">Iesācēji</p>
+					<p class="card-text">Pamatklase</p>
 					<p class="card-text">Ārija</p>
 				</div>
 				<div class="card-footer">
@@ -144,8 +144,8 @@
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Ceturtdiena</div>
 				<div class="card-body text-info">
-					<h5 class="card-title">18:30 - 20:00</h5>
-					<p class="card-text">Iesācēji</p>
+					<h5 class="card-title">18:00 - 19:30</h5>
+					<p class="card-text">Iesācēju klase (2. gads)</p>
 					<p class="card-text">Inta</p>
 				</div>
 				<div class="card-footer">
@@ -154,8 +154,8 @@
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Sestdiena</div>
 				<div class="card-body text-info">
-					<h5 class="card-title">9:30 - 11:00 </h5>
-					<p class="card-text">1. līmenis</p>
+					<h5 class="card-title">9:00 - 10:30 </h5>
+					<p class="card-text">Pamatklase</p>
 					<p class="card-text">Inta</p>
 				</div>
 				<div class="card-footer">
