--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
 				<div class="row flex-items-xs-middle flex-items-xs-center center">
 					<div class="row" style="flex-wrap: nowrap;">
 						<div style="margin: 0 10px;">
-<!-- 							<p style="text-align: center;">Uzņemšana jaunajai rudens sezonai jau drīz!</p> -->
 							<p style="text-align: center;">
 								<img src="assets/CSS/extra/jauna-uznemsana-2023.png" alt="jauna-uznemsana-2023-inta" style="width: 65%;margin-bottom: 40px;">
 								<img src="assets/CSS/extra/jauna-joga-arija-2023.png" alt="jauna-uznemsana-2023-arija" style="width: 65%;">
@@ -75,11 +74,10 @@
 		<!-- Pagaidu grafiks -->
 		<div class="row head align-self-center">
 			<div class="col">
-				<h5>Nodarbību grafiks <strong>2024./2025.</strong> gadam sekos drīzumā!</h5>
+				<h5>Nodarbību grafiks <strong>2024./2025.</strong> gadam</h5>
 			</div>
 		</div>
-		<!-- Mobile -->
-		<div class="apraksts-mobile grafiks" style="display:none !important;">
+		<div class="apraksts-mobile grafiks">
 			<div class="d-flex justify-content-center">
 				<div class="col tabula">
 					<table>
@@ -87,37 +85,37 @@
 							<tr class="upper-tr">
 								<td><strong>Pirmdiena</strong></td>
 								<td>19:00 - 20:30</td>
-								<td>1.-3. līmenis</td>
+								<td>Iesācēji (jauna grupa)</td>
 								<td>Ārija</td>
 							</tr>
 							<tr class="upper-tr">
 								<td><strong>Otrdiena</strong></td>
-								<td>18:30 - 20:00</td>
-								<td>2. līmenis</td>
+								<td>18:00 - 20:00</td>
+								<td>Klase sievietēm</td>
 								<td>Inta</td>
 							</tr>
 							<tr>
 								<td><strong>Trešdiena</strong></td>
 								<td>8:30 - 10:00</td>
-								<td>Iesācēji + 1.-2. līmenis</td>
+								<td>Iesācēji (jauna grupa)</td>
 								<td>Ārija</td>
 							</tr>
 							<tr class="upper-tr">
 								<td></td>
 								<td>19:00 - 20:30</td>
-								<td>Iesācēji</td>
+								<td>Pamatklase</td>
 								<td>Ārija</td>
 							</tr>
 							<tr class="upper-tr">
 								<td><strong>Ceturtdiena</strong></td>
-								<td>18:30 - 20:00</td>
-								<td>Iesācēji</td>
+								<td>18:00 - 19:30</td>
+								<td>Iesācēju klase (2. gads)</td>
 								<td>Inta</td>
 							</tr>
 							<tr>
 								<td><strong>Sestdiena</strong></td>
-								<td>9:30 - 11:00</td>
-								<td>1. līmenis</td>
+								<td>9:00 - 10:30</td>
+								<td>Pamatklase</td>
 								<td>Inta</td>
 							</tr>
 						</tbody>
@@ -127,12 +125,12 @@
 		</div>
 
 		<!-- Desktop -->
-		<div id="nodarbibasCards" class="card-deck  apraksts-desk grafiks" style="display:none">
+		<div id="nodarbibasCards" class="card-deck  apraksts-desk grafiks">
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Pirmdiena</div>
 				<div class="card-body text-info">
 					<h5 class="card-title">19:00 - 20:30</h5>
-					<p class="card-text">1.-3. līmenis</p>
+					<p class="card-text">Iesācēji (jauna grupa)</p>
 					<p class="card-text">Ārija</p>
 				</div>
 				<div class="card-footer">
@@ -141,8 +139,8 @@
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Otrdiena</div>
 				<div class="card-body text-info">
-					<h5 class="card-title">18:30 - 20:00</h5>
-					<p class="card-text">2. līmenis</p>
+					<h5 class="card-title">18:00 - 20:00</h5>
+					<p class="card-text">Klase sievietēm</p>
 					<p class="card-text">Inta</p>
 				</div>
 				<div class="card-footer">
@@ -152,11 +150,11 @@
 				<div class="card-header">Trešdiena</div>
 				<div class="card-body text-info">
 					<h5 class="card-title">8:30 - 10:00</h5>
-					<p class="card-text">Iesācēji + 1.-2. līmenis</p>
+					<p class="card-text">Iesācēji (jauna grupa)</p>
 					<p class="card-text">Ārija</p>
 					<hr>
 					<h5 class="card-title">19:00 - 20:30</h5>
-					<p class="card-text">Iesācēji</p>
+					<p class="card-text">Pamatklase</p>
 					<p class="card-text">Ārija</p>
 				</div>
 				<div class="card-footer">
@@ -165,8 +163,8 @@
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Ceturtdiena</div>
 				<div class="card-body text-info">
-					<h5 class="card-title">18:30 - 20:00</h5>
-					<p class="card-text">Iesācēji</p>
+					<h5 class="card-title">18:00 - 19:30</h5>
+					<p class="card-text">Iesācēju klase (2. gads)</p>
 					<p class="card-text">Inta</p>
 				</div>
 				<div class="card-footer">
@@ -175,15 +173,14 @@
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Sestdiena</div>
 				<div class="card-body text-info">
-					<h5 class="card-title">9:30 - 11:00 </h5>
-					<p class="card-text">1. līmenis</p>
+					<h5 class="card-title">9:00 - 10:30 </h5>
+					<p class="card-text">Pamatklase</p>
 					<p class="card-text">Inta</p>
 				</div>
 				<div class="card-footer">
 				</div>
 			</div>
 		</div>
-	</div>
 <!-- 	Pagaidu grafiks - beigas -->
 
 	<!-- 2. parallax daļa -->
