--- a/index.html
+++ b/index.html
@@ -76,9 +76,116 @@
 			<div class="col">
 				<h5>Nodarbību grafiks <strong>2024./2025.</strong> gadam</h5>
 			</div>
+
+			<!-- Mobile -->
+			<div class="apraksts-mobile grafiks">
+				<div class="d-flex justify-content-center">
+					<div class="col tabula">
+						<table>
+							<tbody>
+								<tr class="upper-tr">
+									<td><strong>Pirmdiena</strong></td>
+									<td>19:00 - 20:30</td>
+									<td>Iesācēji (jauna grupa)</td>
+									<td>Ārija</td>
+								</tr>
+								<tr class="upper-tr">
+									<td><strong>Otrdiena</strong></td>
+									<td>18:00 - 20:00</td>
+									<td>Klase sievietēm</td>
+									<td>Inta</td>
+								</tr>
+								<tr>
+									<td><strong>Trešdiena</strong></td>
+									<td>8:30 - 10:00</td>
+									<td>Iesācēji (jauna grupa)</td>
+									<td>Ārija</td>
+								</tr>
+								<tr class="upper-tr">
+									<td></td>
+									<td>19:00 - 20:30</td>
+									<td>Pamatklase</td>
+									<td>Ārija</td>
+								</tr>
+								<tr class="upper-tr">
+									<td><strong>Ceturtdiena</strong></td>
+									<td>18:00 - 19:30</td>
+									<td>Iesācēju klase (2. gads)</td>
+									<td>Inta</td>
+								</tr>
+								<tr>
+									<td><strong>Sestdiena</strong></td>
+									<td>9:00 - 10:30</td>
+									<td>Pamatklase</td>
+									<td>Inta</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+	
+			<!-- Desktop -->
+			<div id="nodarbibasCards" class="card-deck  apraksts-desk grafiks">
+				<div class="card border-info mb-3" style="max-width: 18rem;">
+					<div class="card-header">Pirmdiena</div>
+					<div class="card-body text-info">
+						<h5 class="card-title">19:00 - 20:30</h5>
+						<p class="card-text">Iesācēji (jauna grupa)</p>
+						<p class="card-text">Ārija</p>
+					</div>
+					<div class="card-footer">
+					</div>
+				</div>
+				<div class="card border-info mb-3" style="max-width: 18rem;">
+					<div class="card-header">Otrdiena</div>
+					<div class="card-body text-info">
+						<h5 class="card-title">18:00 - 20:00</h5>
+						<p class="card-text">Klase sievietēm</p>
+						<p class="card-text">Inta</p>
+					</div>
+					<div class="card-footer">
+					</div>
+				</div>
+				<div class="card border-info mb-3" style="max-width: 18rem;">
+					<div class="card-header">Trešdiena</div>
+					<div class="card-body text-info">
+						<h5 class="card-title">8:30 - 10:00</h5>
+						<p class="card-text">Iesācēji (jauna grupa)</p>
+						<p class="card-text">Ārija</p>
+						<hr>
+						<h5 class="card-title">19:00 - 20:30</h5>
+						<p class="card-text">Pamatklase</p>
+						<p class="card-text">Ārija</p>
+					</div>
+					<div class="card-footer">
+					</div>
+				</div>
+				<div class="card border-info mb-3" style="max-width: 18rem;">
+					<div class="card-header">Ceturtdiena</div>
+					<div class="card-body text-info">
+						<h5 class="card-title">18:00 - 19:30</h5>
+						<p class="card-text">Iesācēju klase (2. gads)</p>
+						<p class="card-text">Inta</p>
+					</div>
+					<div class="card-footer">
+					</div>
+				</div>
+				<div class="card border-info mb-3" style="max-width: 18rem;">
+					<div class="card-header">Sestdiena</div>
+					<div class="card-body text-info">
+						<h5 class="card-title">9:00 - 10:30 </h5>
+						<p class="card-text">Pamatklase</p>
+						<p class="card-text">Inta</p>
+					</div>
+					<div class="card-footer">
+					</div>
+				</div>
+			</div>
 		</div>
 		<!-- 	Pagaidu grafiks - beigas -->
-
+	</div>
+	
 	<!-- 2. parallax daļa -->
 	<div class="bgpar2 parallax">
 		<div class="virsraksti">
