--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 		</div>
 
 		<!-- Grafiks -->
-			<div class="container chapter" style="display:none">
+			<div class="container chapter">
 				<div class="row flex-items-xs-middle flex-items-xs-center center">
 					<div class="row" style="flex-wrap: nowrap;">
 						<div style="margin: 0 10px;">
 							<p style="text-align: center;">
-								<img src="assets/CSS/extra/jauna-uznemsana-2023.png" alt="jauna-uznemsana-2023-inta" style="width: 65%;margin-bottom: 40px;">
-								<img src="assets/CSS/extra/jauna-joga-arija-2023.png" alt="jauna-uznemsana-2023-arija" style="width: 65%;">
+								<img src="assets/CSS/extra/jauna-uznemsana-2023.png" alt="jauna-uznemsana-2023-inta" style="width: 65%;margin-bottom: 40px; display:none;">
+								<img src="assets/CSS/extra/jauna-uznemsana-2024-arija.png" alt="jauna-uznemsana-2024-arija" style="width: 65%;">
 							</p>
 						</div>
             				</div>
