--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							<tbody>
 								<tr class="upper-tr">
 									<td><strong>Pirmdiena</strong></td>
-									<td>19:00 - 20:30</td>
+									<td>18:30 - 20:00<br><span style="color:red; font-size:0.8em">Izmainīts nodarbību laiks!</span></td>
 									<td>Iesācēji (jauna grupa)</td>
 									<td>Ārija</td>
 								</tr>
@@ -130,9 +130,10 @@
 				<div class="card border-info mb-3" style="max-width: 18rem;">
 					<div class="card-header">Pirmdiena</div>
 					<div class="card-body text-info">
-						<h5 class="card-title">19:00 - 20:30</h5>
+						<h5 class="card-title">18:30 - 20:00</h5>
 						<p class="card-text">Iesācēji (jauna grupa)</p>
 						<p class="card-text">Ārija</p>
+						<div class="" style="font-size: 0.6em;margin-top: 0.75em;color: red;">Izmainīts nodarbību laiks!</div>
 					</div>
 					<div class="card-footer">
 					</div>
