Iznemts iesaceju grafis

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</div>
 
 		<!-- Grafiks -->
-			<div class="container chapter">
+<!-- 			<div class="container chapter">
 				<div class="row flex-items-xs-middle flex-items-xs-center center">
 					<div class="row" style="flex-wrap: nowrap;">
 						<div style="margin: 0 10px;">
@@ -69,7 +69,7 @@
 						</div>
             				</div>
 				</div>
-			</div>
+			</div> -->
 		
 		<!-- Pagaidu grafiks -->
 		<div class="row head align-self-center">
