--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 							<tbody>
 								<tr class="upper-tr">
 									<td><strong>Pirmdiena</strong></td>
-									<td>18:30 - 20:00<br><span style="color:red; font-size:0.8em">Izmainīts nodarbību laiks!</span></td>
-									<td>Iesācēji (jauna grupa)</td>
+									<td>18:30 - 20:00</td>
+									<td>Iesācēji</td>
 									<td>Ārija</td>
 								</tr>
 								<tr class="upper-tr">
@@ -131,9 +131,8 @@
 					<div class="card-header">Pirmdiena</div>
 					<div class="card-body text-info">
 						<h5 class="card-title">18:30 - 20:00</h5>
-						<p class="card-text">Iesācēji (jauna grupa)</p>
+						<p class="card-text">Iesācēji</p>
 						<p class="card-text">Ārija</p>
-						<div class="" style="font-size: 0.6em;margin-top: 0.75em;color: red;">Izmainīts nodarbību laiks!</div>
 					</div>
 					<div class="card-footer">
 					</div>
