--- a/nodarbibas.html
+++ b/nodarbibas.html
@@ -65,7 +65,7 @@
 						<tbody>
 							<tr class="upper-tr">
 								<td><strong>Pirmdiena</strong></td>
-								<td>18:30 - 20:00<br><span style="color:red; font-size:0.8em">Izmainīts nodarbību laiks!</span></td>
+								<td>18:30 - 20:00</td>
 								<td>Iesācēji (jauna grupa)</td>
 								<td>Ārija</td>
 							</tr>
@@ -90,7 +90,7 @@
 							<tr class="upper-tr">
 								<td><strong>Ceturtdiena</strong></td>
 								<td>18:00 - 19:30</td>
-								<td>Iesācēju klase (2. gads)</td>
+								<td>Iesācēju klase<br><span style="color:red; font-size:0.8em">Izmainīts nodarbību grafiks!</span></td>
 								<td>Inta</td>
 							</tr>
 							<tr>
@@ -113,7 +113,6 @@
 					<h5 class="card-title">18:30 - 20:00</h5>
 					<p class="card-text">Iesācēji (jauna grupa)</p>
 					<p class="card-text">Ārija</p>
-					<div class="" style="font-size: 0.6em;margin-top: 0.75em;color: red;">Izmainīts nodarbību laiks!</div>
 				</div>
 				<div class="card-footer">
 				</div>
@@ -146,8 +145,9 @@
 				<div class="card-header">Ceturtdiena</div>
 				<div class="card-body text-info">
 					<h5 class="card-title">18:00 - 19:30</h5>
-					<p class="card-text">Iesācēju klase (2. gads)</p>
+					<p class="card-text">Iesācēju klase</p>
 					<p class="card-text">Inta</p>
+					<div class="" style="font-size: 0.6em;margin-top: 0.75em;color: red;">Izmainīts nodarbību grafiks!</div>
 				</div>
 				<div class="card-footer">
 				</div>
