nodarbibu laiks index

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								<tr class="upper-tr">
 									<td><strong>Ceturtdiena</strong></td>
 									<td>18:00 - 19:30</td>
-									<td>Iesācēju klase (2. gads)</td>
+									<td>Iesācēju klase<br><span style="color:red; font-size:0.8em">Izmainīts nodarbību grafiks!</span></td>
 									<td>Inta</td>
 								</tr>
 								<tr>
@@ -165,8 +165,9 @@
 					<div class="card-header">Ceturtdiena</div>
 					<div class="card-body text-info">
 						<h5 class="card-title">18:00 - 19:30</h5>
-						<p class="card-text">Iesācēju klase (2. gads)</p>
+						<p class="card-text">Iesācēju klase</p>
 						<p class="card-text">Inta</p>
+						<span style="color:red; font-size:0.8em">Izmainīts nodarbību grafiks!</span>
 					</div>
 					<div class="card-footer">
 					</div>
