--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								<tr class="upper-tr">
 									<td><strong>Ceturtdiena</strong></td>
 									<td>18:00 - 19:30</td>
-									<td>Iesācēju klase<br><span style="color:red; font-size:0.8em">Izmainīts nodarbību grafiks!</span></td>
+									<td>Iesācēju klase<br><span style="color:red; font-size:0.8em">Jauna iesācēju klase!</span></td>
 									<td>Inta</td>
 								</tr>
 								<tr>
@@ -167,7 +167,7 @@
 						<h5 class="card-title">18:00 - 19:30</h5>
 						<p class="card-text">Iesācēju klase</p>
 						<p class="card-text">Inta</p>
-						<span style="color:red; font-size:0.8em">Izmainīts nodarbību grafiks!</span>
+						<span style="color:red; font-size:0.8em">Jauna iesācēju klase!</span>
 					</div>
 					<div class="card-footer">
 					</div>
