--- a/nodarbibas.html
+++ b/nodarbibas.html
@@ -90,7 +90,7 @@
 							<tr class="upper-tr">
 								<td><strong>Ceturtdiena</strong></td>
 								<td>18:00 - 19:30</td>
-								<td>Iesācēju klase<br><span style="color:red; font-size:0.8em">Izmainīts nodarbību grafiks!</span></td>
+								<td>Iesācēju klase<br><span style="color:red; font-size:0.8em">Jauna iesācēju klase!</span></td>
 								<td>Inta</td>
 							</tr>
 							<tr>
@@ -147,7 +147,7 @@
 					<h5 class="card-title">18:00 - 19:30</h5>
 					<p class="card-text">Iesācēju klase</p>
 					<p class="card-text">Inta</p>
-					<div class="" style="font-size: 0.6em;margin-top: 0.75em;color: red;">Izmainīts nodarbību grafiks!</div>
+					<div class="" style="font-size: 0.6em;margin-top: 0.75em;color: red;">Jauna iesācēju klase!</div>
 				</div>
 				<div class="card-footer">
 				</div>
