Arijas grupas izmainas

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								<tr>
 									<td><strong>Trešdiena</strong></td>
 									<td>8:30 - 10:00</td>
-									<td>Iesācēji (jauna grupa)</td>
+									<td>Iesācēji</td>
 									<td>Ārija</td>
 								</tr>
 								<tr class="upper-tr">
@@ -151,7 +151,7 @@
 					<div class="card-header">Trešdiena</div>
 					<div class="card-body text-info">
 						<h5 class="card-title">8:30 - 10:00</h5>
-						<p class="card-text">Iesācēji (jauna grupa)</p>
+						<p class="card-text">Iesācēji</p>
 						<p class="card-text">Ārija</p>
 						<hr>
 						<h5 class="card-title">19:00 - 20:30</h5>
