Arijas grupu izmainas

--- a/nodarbibas.html
+++ b/nodarbibas.html
@@ -66,7 +66,7 @@
 							<tr class="upper-tr">
 								<td><strong>Pirmdiena</strong></td>
 								<td>18:30 - 20:00</td>
-								<td>Iesācēji (jauna grupa)</td>
+								<td>Iesācēji</td>
 								<td>Ārija</td>
 							</tr>
 							<tr class="upper-tr">
@@ -78,7 +78,7 @@
 							<tr>
 								<td><strong>Trešdiena</strong></td>
 								<td>8:30 - 10:00</td>
-								<td>Iesācēji (jauna grupa)</td>
+								<td>Iesācēji</td>
 								<td>Ārija</td>
 							</tr>
 							<tr class="upper-tr">
@@ -111,7 +111,7 @@
 				<div class="card-header">Pirmdiena</div>
 				<div class="card-body text-info">
 					<h5 class="card-title">18:30 - 20:00</h5>
-					<p class="card-text">Iesācēji (jauna grupa)</p>
+					<p class="card-text">Iesācēji</p>
 					<p class="card-text">Ārija</p>
 				</div>
 				<div class="card-footer">
@@ -131,7 +131,7 @@
 				<div class="card-header">Trešdiena</div>
 				<div class="card-body text-info">
 					<h5 class="card-title">8:30 - 10:00</h5>
-					<p class="card-text">Iesācēji (jauna grupa)</p>
+					<p class="card-text">Iesācēji</p>
 					<p class="card-text">Ārija</p>
 					<hr>
 					<h5 class="card-title">19:00 - 20:30</h5>
