--- a/nodarbibas.html
+++ b/nodarbibas.html
@@ -147,7 +147,7 @@
 					<h5 class="card-title">18:00 - 19:30</h5>
 					<p class="card-text">Iesācēju klase</p>
 					<p class="card-text">Inta</p>
-					<div class="" style="font-size: 0.6em;margin-top: 0.75em;color: red;">Jauna iesācēju klase!</div>
+					<div class="" style="font-size: 0.8em;margin-top: 0.75em;color: red;text-align: center;">Jauna iesācēju klase!</div>
 				</div>
 				<div class="card-footer">
 				</div>
