--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 	<!-- Sidebar -->
 	<div id="icons">
+		
 		<a href="https://www.facebook.com/VidzemesJogascentrs/"><i class="fab fa-facebook fa-3x" ></i></a><br>
 	</div>
 
@@ -58,23 +59,23 @@
 		</div>
 
 		<!-- Grafiks -->
-			<div class="container chapter">
+<!-- 			<div class="container chapter">
 				<div class="row flex-items-xs-middle flex-items-xs-center center">
 					<div class="row" style="flex-wrap: nowrap;">
 						<div style="margin: 0 10px;">
 							<p style="text-align: center;">
 								<img src="assets/CSS/extra/2025-janvara-uznemsana.png" alt="2025-janvara-uznemsana" style="width: 65%">
-<!-- 								<img src="assets/CSS/extra/jauna-uznemsana-2024-arija.png" alt="jauna-uznemsana-2024-arija" style="width: 65%;"> -->
+								<img src="assets/CSS/extra/jauna-uznemsana-2024-arija.png" alt="jauna-uznemsana-2024-arija" style="width: 65%;">
 							</p>
 						</div>
             				</div>
 				</div>
-			</div>
+			</div> -->
 		
 		<!-- Pagaidu grafiks -->
 		<div class="row head align-self-center">
 			<div class="col">
-				<h5>Nodarbību grafiks <strong>2024./2025.</strong> gadam</h5>
+				<h5>Nodarbību grafiks <strong>20245./2026.</strong> gadam</h5>
 			</div>
 
 			<!-- Mobile -->
@@ -86,37 +87,31 @@
 								<tr class="upper-tr">
 									<td><strong>Pirmdiena</strong></td>
 									<td>18:30 - 20:00</td>
-									<td>Iesācēji</td>
+									<td>Visi līmeņi</td>
 									<td>Ārija</td>
 								</tr>
 								<tr class="upper-tr">
 									<td><strong>Otrdiena</strong></td>
 									<td>18:00 - 20:00</td>
-									<td>Klase sievietēm</td>
+									<td>Visi līmeņi</td>
 									<td>Inta</td>
 								</tr>
 								<tr>
 									<td><strong>Trešdiena</strong></td>
 									<td>8:30 - 10:00</td>
-									<td>Iesācēji</td>
+									<td>Visi līmeņi</td>
 									<td>Ārija</td>
 								</tr>
 								<tr class="upper-tr">
 									<td></td>
 									<td>19:00 - 20:30</td>
-									<td>Pamatklase</td>
+									<td>Iesācēji</td>
 									<td>Ārija</td>
 								</tr>
 								<tr class="upper-tr">
 									<td><strong>Ceturtdiena</strong></td>
 									<td>18:00 - 19:30</td>
-									<td>Iesācēju klase<br><span style="color:red; font-size:0.8em">Jauna iesācēju klase!</span></td>
-									<td>Inta</td>
-								</tr>
-								<tr>
-									<td><strong>Sestdiena</strong></td>
-									<td>9:00 - 10:30</td>
-									<td>Pamatklase</td>
+									<td>1. līmenis</td>
 									<td>Inta</td>
 								</tr>
 							</tbody>
@@ -131,7 +126,7 @@
 					<div class="card-header">Pirmdiena</div>
 					<div class="card-body text-info">
 						<h5 class="card-title">18:30 - 20:00</h5>
-						<p class="card-text">Iesācēji</p>
+						<p class="card-text">Visi līmeņi</p>
 						<p class="card-text">Ārija</p>
 					</div>
 					<div class="card-footer">
@@ -141,7 +136,7 @@
 					<div class="card-header">Otrdiena</div>
 					<div class="card-body text-info">
 						<h5 class="card-title">18:00 - 20:00</h5>
-						<p class="card-text">Klase sievietēm</p>
+						<p class="card-text">Visi līmeņi</p>
 						<p class="card-text">Inta</p>
 					</div>
 					<div class="card-footer">
@@ -151,11 +146,11 @@
 					<div class="card-header">Trešdiena</div>
 					<div class="card-body text-info">
 						<h5 class="card-title">8:30 - 10:00</h5>
-						<p class="card-text">Iesācēji</p>
+						<p class="card-text">Visi līmeņi</p>
 						<p class="card-text">Ārija</p>
 						<hr>
 						<h5 class="card-title">19:00 - 20:30</h5>
-						<p class="card-text">Pamatklase</p>
+						<p class="card-text">Iesācēji</p>
 						<p class="card-text">Ārija</p>
 					</div>
 					<div class="card-footer">
@@ -165,18 +160,7 @@
 					<div class="card-header">Ceturtdiena</div>
 					<div class="card-body text-info">
 						<h5 class="card-title">18:00 - 19:30</h5>
-						<p class="card-text">Iesācēju klase</p>
-						<p class="card-text">Inta</p>
-						<span style="color:red; font-size:0.8em">Jauna iesācēju klase!</span>
-					</div>
-					<div class="card-footer">
-					</div>
-				</div>
-				<div class="card border-info mb-3" style="max-width: 18rem;">
-					<div class="card-header">Sestdiena</div>
-					<div class="card-body text-info">
-						<h5 class="card-title">9:00 - 10:30 </h5>
-						<p class="card-text">Pamatklase</p>
+						<p class="card-text">1. līmenis</p>
 						<p class="card-text">Inta</p>
 					</div>
 					<div class="card-footer">
