--- a/nodarbibas.html
+++ b/nodarbibas.html
@@ -53,7 +53,7 @@
 	<div class="container chapter">
 		<div class="row head align-self-center">
 			<div class="col">
-				<h3>Nodarbību grafiks <strong>2024./2025.</strong> gadam</h3>
+				<h3>Nodarbību grafiks <strong>2025./2026.</strong> gadam</h3>
 			</div>
 		</div>
 
@@ -66,37 +66,31 @@
 							<tr class="upper-tr">
 								<td><strong>Pirmdiena</strong></td>
 								<td>18:30 - 20:00</td>
-								<td>Iesācēji</td>
+								<td>Visi līmeņi</td>
 								<td>Ārija</td>
 							</tr>
 							<tr class="upper-tr">
 								<td><strong>Otrdiena</strong></td>
 								<td>18:00 - 20:00</td>
-								<td>Klase sievietēm</td>
+								<td>Visi līmeņi</td>
 								<td>Inta</td>
 							</tr>
 							<tr>
 								<td><strong>Trešdiena</strong></td>
 								<td>8:30 - 10:00</td>
-								<td>Iesācēji</td>
+								<td>Visi līmeņi</td>
 								<td>Ārija</td>
 							</tr>
 							<tr class="upper-tr">
 								<td></td>
 								<td>19:00 - 20:30</td>
-								<td>Pamatklase</td>
+								<td>Iesācēji</td>
 								<td>Ārija</td>
 							</tr>
 							<tr class="upper-tr">
 								<td><strong>Ceturtdiena</strong></td>
 								<td>18:00 - 19:30</td>
-								<td>Iesācēju klase<br><span style="color:red; font-size:0.8em">Jauna iesācēju klase!</span></td>
-								<td>Inta</td>
-							</tr>
-							<tr>
-								<td><strong>Sestdiena</strong></td>
-								<td>9:00 - 10:30</td>
-								<td>Pamatklase</td>
+								<td>1. līmenis</td>
 								<td>Inta</td>
 							</tr>
 						</tbody>
@@ -111,7 +105,7 @@
 				<div class="card-header">Pirmdiena</div>
 				<div class="card-body text-info">
 					<h5 class="card-title">18:30 - 20:00</h5>
-					<p class="card-text">Iesācēji</p>
+					<p class="card-text">Visi līmeņi</p>
 					<p class="card-text">Ārija</p>
 				</div>
 				<div class="card-footer">
@@ -121,7 +115,7 @@
 				<div class="card-header">Otrdiena</div>
 				<div class="card-body text-info">
 					<h5 class="card-title">18:00 - 20:00</h5>
-					<p class="card-text">Klase sievietēm</p>
+					<p class="card-text">Visi līmeņi</p>
 					<p class="card-text">Inta</p>
 				</div>
 				<div class="card-footer">
@@ -131,11 +125,11 @@
 				<div class="card-header">Trešdiena</div>
 				<div class="card-body text-info">
 					<h5 class="card-title">8:30 - 10:00</h5>
-					<p class="card-text">Iesācēji</p>
+					<p class="card-text">Visi līmeņi</p>
 					<p class="card-text">Ārija</p>
 					<hr>
 					<h5 class="card-title">19:00 - 20:30</h5>
-					<p class="card-text">Pamatklase</p>
+					<p class="card-text">Iesācēji</p>
 					<p class="card-text">Ārija</p>
 				</div>
 				<div class="card-footer">
@@ -145,18 +139,7 @@
 				<div class="card-header">Ceturtdiena</div>
 				<div class="card-body text-info">
 					<h5 class="card-title">18:00 - 19:30</h5>
-					<p class="card-text">Iesācēju klase</p>
-					<p class="card-text">Inta</p>
-					<div class="" style="font-size: 0.8em;margin-top: 0.75em;color: red;text-align: center;">Jauna iesācēju klase!</div>
-				</div>
-				<div class="card-footer">
-				</div>
-			</div>
-			<div class="card border-info mb-3" style="max-width: 18rem;">
-				<div class="card-header">Sestdiena</div>
-				<div class="card-body text-info">
-					<h5 class="card-title">9:00 - 10:30 </h5>
-					<p class="card-text">Pamatklase</p>
+					<p class="card-text">1. līmenis</p>
 					<p class="card-text">Inta</p>
 				</div>
 				<div class="card-footer">
@@ -277,7 +260,7 @@
 							<p>Nodarbību laikā turpinās bāzes asanu pilnveidošana, tiek apgūtas smalkākas nianses šajās  asanās, instrukcijas kļūst sarežģītākas, tās vērstas ne tikai uz asanas ģeometrisku izlīdzināšanu, bet uz dziļāku iekšēju darbu – ķermeņa daļu rotācijām, stiepšanām u.tt. Asanu izpildes laiks kļūst garāks.</p>
 							<p>Tiek mācītas arī apgrieztās pozas - Širšasana (stāja uz galvas) un Sarvangasana (stāja uz pleciem).</p>
 							<p>Pēc šīs klases pabeigšanas audzēkņi var pāriet uz 2. līmeņa klasi, bet var arī turpināt attīstīt savu praksi šī līmeņa klasē (atkarīgs no katra attīstības līmeņa un vēlmēm).</p>
-							<p>Nodarbības ilgums - 2 stundas.</p>
+							<p>Nodarbības ilgums - 1.5 stunda.</p>
 						</div>
 						<div class="tab-pane fade" id="list-profile2" role="tabpanel" aria-labelledby="list-profile-list3">
 							<img class="attels veidi apraksts-desk" src="assets/CSS/limeni/2_limenis.jpg" alt="2. līmenis">
@@ -285,14 +268,14 @@
 							<p>Nodarbību laikā turpinās bāzes līmeņa asanu praktizēšana, klāt nāk sarežģītākas asanas, kuras spēcīgāk iedarbojas uz ķermeni. Nodarbības tiek veidotas pa tēmām, piemēram, gurnu atvēršana, krūšu kurvja atvēšana, noliecieni, atliecieni, sagriezieni, līdzsvars u.tt. Ar katru jaunu līmeni instrukcijas darbam ar ķermeni kļūst arvien dziļākas un iedarbīgākas.</p>
 							<p>Pagarinās apgriezto asanu izturēšanas ilgums - Širšasana (stāja uz galvas) pie sienas – 5 min,  Sarvangasana (stāja uz pleciem) – 5 min.</p>
 							<p>Sākas iepazīšanās ar pranajamu (elpošanas tehnikām) un vienkāršāko pranajamas tehniku apgūšana.</p>
-							<p>Nodarbības ilgumas - 2 stundas.</p>
+							<p>Nodarbības ilgumas - 1.5 stunda.</p>
 						</div>
 						<div class="tab-pane fade" id="list-profile3" role="tabpanel" aria-labelledby="list-profile-list4">
 							<img class="attels veidi apraksts-desk" src="assets/CSS/limeni/3_limenis.jpg" alt="3. līmenis">
 							<p><strong>Klase paredzēta audzēkņiem, kas apguvuši 1. un 2. līmeņus.</strong></p>
 							<p>Asanu programmā saglabājas gan  bāzes asanas, gan  1. un 2. līmeņu asanas, klāt nāk sarežģīti atliecieni (Urdhva Dhanurasana – tilta poza), sarežģīti sagriezieni, līdzsvara pozas uz rokām, dažādas variācijas apgrieztajās pozās. Asanu izturēšanas laiks kļūst garāks, apgriezto asanu laiks pagarinās - Širšasana zāles vidū – 8 min, Sarvangasana – 10 min. Asanu izpildes instrukcijas kļūst komplicētākas, darbs ar ķermeni – dziļāks, asanu izpildes laikā jāmāk noturēt gurnu kauli gurnu locītavās, augšdelmu kauli – plecu locītavās u.tt.</p>
 							<p>Notiek pranajamas (elpošanas tehniku) tālāka apgūšana, tiek mācītas sarežģītākas pranajamas tehnikas.</p>
-							<p>Nodarbības ilgums - 2 stundas.</p>
+							<p>Nodarbības ilgums - 1.5 stunda.</p>
 						</div>
 						<div class="tab-pane fade" id="list-profile4" role="tabpanel" aria-labelledby="list-profile-list5">
 							<img class="attels veidi apraksts-desk" src="assets/CSS/limeni/atjaunojosa.jpg" alt="Atjaunojošā">
@@ -309,7 +292,7 @@
 								<li>atjauno enerģiju;</li>
 								<li>atslābina ķermeni un prātu.</li>
 							</ul>
-							<p>Nodarbības ilgums - 2 stundas.</p>
+							<p>Nodarbības ilgums - 1.5 stunda.</p>
 						</div>
 					</div>
 				</div>
@@ -354,7 +337,7 @@
 							<p>Nodarbību laikā turpinās bāzes asanu pilnveidošana, tiek apgūtas smalkākas nianses šajās  asanās, instrukcijas kļūst sarežģītākas, tās vērstas ne tikai uz asanas ģeometrisku izlīdzināšanu, bet uz dziļāku iekšēju darbu – ķermeņa daļu rotācijām, stiepšanām u.tt. Asanu izpildes laiks kļūst garāks.</p>
 							<p>Tiek mācītas arī apgrieztās pozas - Širšasana (stāja uz galvas) un Sarvangasana (stāja uz pleciem).</p>
 							<p>Pēc šīs klases pabeigšanas audzēkņi var pāriet uz 2. līmeņa klasi, bet var arī turpināt attīstīt savu praksi šī līmeņa klasē (atkarīgs no katra attīstības līmeņa un vēlmēm).</p>
-							<p>Nodarbības ilgums - 2 stundas.</p>
+							<p>Nodarbības ilgums - 1.5 stunda.</p>
 						</div>
 					</div>
 				</div>
@@ -373,7 +356,7 @@
 							<p>Nodarbību laikā turpinās bāzes līmeņa asanu praktizēšana, klāt nāk sarežģītākas asanas, kuras spēcīgāk iedarbojas uz ķermeni. Nodarbības tiek veidotas pa tēmām, piemēram, gurnu atvēršana, krūšu kurvja atvēšana, noliecieni, atliecieni, sagriezieni, līdzsvars u.tt. Ar katru jaunu līmeni instrukcijas darbam ar ķermeni kļūst arvien dziļākas un iedarbīgākas.</p>
 							<p>Pagarinās apgriezto asanu izturēšanas ilgums - Širšasana (stāja uz galvas) pie sienas – 5 min,  Sarvangasana (stāja uz pleciem) – 5 min.</p>
 							<p>Sākas iepazīšanās ar pranajamu (elpošanas tehnikām) un vienkāršāko pranajamas tehniku apgūšana.</p>
-							<p>Nodarbības ilgumas - 2 stundas.</p>
+							<p>Nodarbības ilgumas - 1.5 stunda.</p>
 						</div>
 					</div>
 				</div>
@@ -391,7 +374,7 @@
 							<p><strong>Klase paredzēta audzēkņiem, kas apguvuši 1. un 2. līmeņus.</strong></p>
 							<p>Asanu programmā saglabājas gan  bāzes asanas, gan  1. un 2. līmeņu asanas, klāt nāk sarežģīti atliecieni (Urdhva Dhanurasana – tilta poza), sarežģīti sagriezieni, līdzsvara pozas uz rokām, dažādas variācijas apgrieztajās pozās. Asanu izturēšanas laiks kļūst garāks, apgriezto asanu laiks pagarinās - Širšasana zāles vidū – 8 min, Sarvangasana – 10 min. Asanu izpildes instrukcijas kļūst komplicētākas, darbs ar ķermeni – dziļāks, asanu izpildes laikā jāmāk noturēt gurnu kauli gurnu locītavās, augšdelmu kauli – plecu locītavās u.tt.</p>
 							<p>Notiek pranajamas (elpošanas tehniku) tālāka apgūšana, tiek mācītas sarežģītākas pranajamas tehnikas.</p>
-							<p>Nodarbības ilgums - 2 stundas.</p>
+							<p>Nodarbības ilgums - 1.5 stunda.</p>
 						</div>
 					</div>
 				</div>
@@ -419,7 +402,7 @@
 								<li>atjauno enerģiju;</li>
 								<li>atslābina ķermeni un prātu.</li>
 							</ul>
-							<p>Nodarbības ilgums - 2 stundas.</p>
+							<p>Nodarbības ilgums - 1.5 stunda.</p>
 						</div>
 					</div>
 				</div>
