--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
 		
 		<!-- Pagaidu grafiks -->
 		<div class="row head align-self-center">
-			<div class="col">
+			<div class="col" style="width: 100%;">
 				<h5>Nodarbību grafiks <strong>2025./2026.</strong> gadam</h5>
 			</div>
 
 			<!-- Mobile -->
-			<div class="apraksts-mobile grafiks">
+			<div class="apraksts-mobile grafiks" style="width: 100%;">
 				<div class="d-flex justify-content-center">
 					<div class="col tabula">
 						<table>
@@ -121,7 +121,7 @@
 			</div>
 	
 			<!-- Desktop -->
-			<div id="nodarbibasCards" class="card-deck  apraksts-desk grafiks">
+			<div id="nodarbibasCards" class="card-deck  apraksts-desk grafiks" style="width: 100%;">
 				<div class="card border-info mb-3" style="max-width: 18rem;">
 					<div class="card-header">Pirmdiena</div>
 					<div class="card-body text-info">
