Jauns grafika formats nodarbibas.html

--- a/nodarbibas.html
+++ b/nodarbibas.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="assets/CSS/vjc-logo-only-small.png">
 	<link rel="stylesheet" type="text/css" href="assets/CSS/vjc-parallax.css">
+	<link rel="stylesheet" type="text/css" href="nodarbibas-css.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
@@ -57,8 +58,25 @@
 			</div>
 		</div>
 
+<!-- 		Grafiks -->
+		<div id="nodarbibu-grafiks">
+			<div class="nodarbibu-grafiks_diena template hidden">
+				<div class="nodarbibu-grafiks_diena--nosaukums"></div>
+				<div class="nodarbibu-grafiks_diena--nodarbibu-saraksts">
+					<div class="nodarbibu-saraksts--nodarbiba hidden">
+						<div class="nodarbiba--nosaukums"></div>
+						<div class="nodarbiba--pasniedzejs"></div>
+						<div class="nodarbiba--laiks">
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-clock w-3 h-3" data-filename="components/calendar/ClassCard" data-linenumber="57" data-visual-selector-id="components/calendar/ClassCard57" data-source-location="components/calendar/ClassCard:57:16" data-dynamic-content="false"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
+							<span></span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<!-- Mobile -->
-		<div class="apraksts-mobile grafiks">
+<!-- 		<div class="apraksts-mobile grafiks">
 			<div class="d-flex justify-content-center">
 				<div class="col tabula">
 					<table>
@@ -97,10 +115,10 @@
 					</table>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<!-- Desktop -->
-		<div id="nodarbibasCards" class="card-deck  apraksts-desk grafiks">
+<!-- 		<div id="nodarbibasCards" class="card-deck  apraksts-desk grafiks">
 			<div class="card border-info mb-3" style="max-width: 18rem;">
 				<div class="card-header">Pirmdiena</div>
 				<div class="card-body text-info">
@@ -145,7 +163,7 @@
 				<div class="card-footer">
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<hr>
 
 		<!-- Cenas -->
@@ -453,5 +471,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="assets/JS/vjc-parallax.js"></script>
+	<script src="nodarbibas-script.js"></script>
 </body>
 </html>
