--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			</div> -->
 		
 		<!-- Pagaidu grafiks -->
-		<div class="row head align-self-center">
+		<div class="row head align-self-center" style="display: block;">
 			<div class="col" style="width: 100%;">
 				<h5>Nodarbību grafiks <strong>2025./2026.</strong> gadam</h5>
 			</div>
