--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
 			</div>
 		</div>
 
-		<!-- Grafiks -->
-<!-- 			<div class="container chapter">
+		<!-- Afišas -->
+			<div class="container chapter">
 				<div class="row flex-items-xs-middle flex-items-xs-center center">
 					<div class="row" style="flex-wrap: nowrap;">
 						<div style="margin: 0 10px;">
 							<p style="text-align: center;">
-								<img src="assets/CSS/extra/2025-janvara-uznemsana.png" alt="2025-janvara-uznemsana" style="width: 65%">
-								<img src="assets/CSS/extra/jauna-uznemsana-2024-arija.png" alt="jauna-uznemsana-2024-arija" style="width: 65%;">
+								<img src="assets/CSS/extra/Arija-2025-2026.png" alt="Arija-2025-2026.png" style="width: 65%">
+<!-- 								<img src="assets/CSS/extra/jauna-uznemsana-2024-arija.png" alt="jauna-uznemsana-2024-arija" style="width: 65%;"> -->
 							</p>
 						</div>
             				</div>
 				</div>
-			</div> -->
+			</div>
 		
 		<!-- Pagaidu grafiks -->
 		<div class="row head align-self-center" style="display: block;">
