--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<div class="row" style="flex-wrap: nowrap;">
 						<div style="margin: 0 10px;">
 							<p style="text-align: center;">
-								<img src="assets/CSS/extra/Arija-2025-2026.png" alt="Arija-2025-2026.png" style="width: 65%">
+								<img src="assets/CSS/extra/Arija-2025-2026.png" alt="Arija-2025-2026.png" style="width: 90%; padding: 0 15px;">
 <!-- 								<img src="assets/CSS/extra/jauna-uznemsana-2024-arija.png" alt="jauna-uznemsana-2024-arija" style="width: 65%;"> -->
 							</p>
 						</div>
